--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
                             Télécharger le CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
