--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -93,9 +93,9 @@
                     </div>
 
                     <div class="home__img">
-                        <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
+                        <!-- <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <mask id="mask0" mask-type="alpha">
+                            <mask id="mask0" mask-type="">
                                 <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
                                     130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
                                     97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
@@ -106,13 +106,15 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x="12" y="18" xlink:href="assets/img/td1.JPG" />
-                            </g>
-                        </svg>
+                                <image class="home__blob-img" width="120" height="180"  xlink:href="assets/img/td1.JPG" />
+                                </g>
+                        </svg> -->
+                        <img src="assets/img/td1.JPG" alt="" class="about__img">
+
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Salut, je suis Tiècoura DIARRA</h1>
+                        <h2 class="home__title">Salut, je suis Tiècoura DIARRA</h2>
                         <h3 class="home__subtitle"> Développeur Fullstack</h3>
                         <p class="home__description">Expérience de haut niveau dans la conception et
                             le développement des Applications Mobiles et Sites Webs, produisant un travail de qualité.
@@ -175,7 +177,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a  href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
+                        <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
                             Télécharger le CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -197,7 +199,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Maquetter une application / site-web</h1>
+                                <h2 class="skills__title">Maquetter une application / site-web</h2>
                                 <span class="skills__subtitle">Plus de 07 mois</span>
                             </div>
 
@@ -252,7 +254,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Développeur Front-end</h1>
+                                <h2 class="skills__title">Développeur Front-end</h2>
                                 <span class="skills__subtitle">Plus de 07 mois</span>
                             </div>
 
@@ -353,7 +355,7 @@
                             <i class="uil uil-server-network skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Développeur Back-end</h1>
+                                <h2 class="skills__title">Développeur Back-end</h2>
                                 <span class="skills__subtitle">Plus de 07 mois</span>
                             </div>
 
@@ -393,11 +395,6 @@
                     </div>
                 </div>
             </div>
-
-
-            </div>
-            </div>
-
         </section>
 
         <!--==================== QUALIFICATION ====================-->
@@ -687,49 +684,6 @@
                     </div>
                 </div>
 
-                <!--==================== SERVICES 3 ====================-->
-                <!-- <div class="services__content">
-                    <div>
-                        <i class="uil uil-pen services__icon"></i>
-                        <h3 class="services__title">Concepteur de <br> marque</h3>
-                    </div>
-                    <span class="button button--flex button--small button--link services__button">
-                        Voir plus
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </span>
-
-                    <div class="services__modal">
-                        <div class="services__modal-content">
-                            <h4 class="services__modal-title">Concepteur de <br> marque</h4>
-                            <i class="uil uil-times services__modal-close"></i>
-
-                            <ul class="services__modal-services grid">
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Je vous aide à vous démarquer de vos concurrents.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Je peux vous aidez à renforcé la reconnaissance de votre marque.</p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>je peux créer et apporté une expérience de marque cohérente pour vos clients..
-                                    </p>
-                                </li>
-
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Avec mon experience je pourrai apporter à votre entreprise de créer des liens
-                                        avec votre audience et de fidéliser votre clientèle.</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div> -->
-
                 <!--==================== SERVICES 2 ====================-->
                 <div class="services__content">
                     <div>
@@ -901,27 +855,27 @@
                     </div>
                 </div>
 
-                <form action="" class="contact__form grid">
+                <form action="POST" class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
-                            <label for="" class="contact__label">Nom</label>
+                            <label class="contact__label">Nom</label>
                             <input type="text" class="contact__input">
                         </div>
 
                         <div class="contact__content">
-                            <label for="" class="contact__label">E-mail</label>
+                            <label class="contact__label">E-mail</label>
                             <input type="email" class="contact__input">
                         </div>
                     </div>
 
                     <div class="contact__content">
-                        <label for="" class="contact__label">Project</label>
+                        <label class="contact__label">Project</label>
                         <input type="text" class="contact__input">
                     </div>
 
                     <div class="contact__content">
-                        <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <label class="contact__label">Message</label>
+                        <textarea id="textarea" cols="1" rows="7" class="contact__input"></textarea>
                     </div>
 
                     <div>
