Après l'index sur google

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="google-site-verification" content="TPTNIm2HlnFXyphHIYl5rh16PIpcsipKjAbs97U36Pw" />
+    <meta name="Description" content="Je suis DIARRA Tiècoura un Dévelloppeur full stack, apprenant à Orange Digital Center et également 
+    détenteur d'une licence en Génie informatique. J'ai travaillé sur plusieurs projets
+    et je suis doté d'un excellent sens d'écoute. Le travail en équipe n'a jamais été un soucis au contraire
+    c'est dans lui que j'arrive à exploiter une grande partie de mes potentialités">
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
