--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="http://linkedin.com/" target="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/in/ti%C3%A8coura-diarra-64822225a/" target="_blank" class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="http://dribble.com" target="_blank" class="home__social-icon">
+                        <!-- <a href="http://dribble.com" target="_blank" class="home__social-icon">
                             <i class="uil uil-dribbble"></i>
-                        </a>
-                        <a href="http://github.com" target="_blank" class="home__social-icon">
+                        </a> -->
+                        <a href="https://github.com/TiecouraDiarra" target="_blank" class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
@@ -151,27 +151,21 @@
                         d'expérience, travaillant dans les technologies Web ainsi que dans la
                         conception UI / UX, fournissant un travail de qualité.</p>
                     <div class="my-info mt-md-5 mt-4">
-                        <ul class="single-info">
-                            <li class="name-style">Nom & Prenom</li>
-                            <li>:</li>
-                            <li>
-                                <p>DIARRA Tiècoura </p>
-                            </li>
-                        </ul>
-                        <ul class="single-info">
-                            <li class="name-style">Age</li>
-                            <li>:</li>
-                            <li>
-                                <p>22 ans</p>
-                            </li>
-                        </ul>
-                        <ul class="single-info">
-                            <li class="name-style">De</li>
-                            <li>:</li>
-                            <li>
-                                <p>Mali, ML</p>
-                            </li>
-                        </ul>
+                        <a style="color: blue" href="https://www.facebook.com/tiecoura.diarra.79274" target="_blank" class="footer__social">
+                            <i class="uil uil-facebook"></i>
+                        </a>
+                        <a style="color: red" href="http://instagram.com" target="_blank" class="footer__social">
+                            <i class="uil uil-instagram"></i>
+                        </a>
+                        <a style="color: blue" href="http://twitter.com/" target="_blank" class="footer__social">
+                            <i class="uil uil-twitter-alt"></i>
+                        </a>
+                        <a style="color: blue" href="https://www.linkedin.com/in/ti%C3%A8coura-diarra-64822225a/" target="_blank" class="footer__social">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                        <a style="color: blue" href="https://github.com/TiecouraDiarra" target="_blank" class="footer__social">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
                         <ul class="single-info">
                             <li class="name-style">Email</li>
                             <li>:</li>
@@ -182,9 +176,12 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
-                            Télécharger le CV<i class="uil uil-download-alt button__icon"></i>
+                        <a download="" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex" target="_blank">
+                            Télécharger mon cv<i class="uil uil-download-alt button__icon"></i>
                         </a>
+                        <!-- <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
+                            Télécharger le CV<i class="uil uil-download-alt button__icon"></i>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -193,7 +190,7 @@
 
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
-            <h2 class="section__title">Compétence</h2>
+            <h2 class="section__title">Compétences</h2>
             <span class="section__subtitle">Mon niveau technique</span>
 
             <div class="skills__container container grid">
@@ -404,7 +401,7 @@
 
         <!--==================== QUALIFICATION ====================-->
         <section class="qualification__section">
-            <h2 class="section__title">Qualification</h2>
+            <h2 class="section__title">Qualifications</h2>
             <span class="section__subtitle">Mon parcours personnel</span>
 
             <div class="qualification__container container">
@@ -426,7 +423,7 @@
                         <!--==================== QUALIFICATION 1 ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Licence professionnelle</h3>
+                                <h3 class="qualification__title">Licence en Génie Informatique</h3>
                                 <span class="qualification__subtitle">Bamako - Institut Supérieur d'Informatique et de
                                     Management(ISIM)</span>
                                 <div class="qualification__calendar">
@@ -440,23 +437,6 @@
                                 <span class="qualification__line"></span>
                             </div>
                         </div>
-
-                        <!-- <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">Informatique de gestion</h3>
-                                <span class="qualification__subtitle">Bamako - ISP-DIBA</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    2020 - 2021 <br>
-                                </div>
-                            </div>
-
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-                        </div> -->
-
                         <div class="qualification__data">
                             <div></div>
                             <div>
@@ -465,7 +445,7 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Informatique de gestion</h3>
+                                <h3 class="qualification__title">Licence en Informatique de gestion</h3>
                                 <span class="qualification__subtitle">Bamako - ISP-DIBA</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -473,25 +453,6 @@
                                 </div> <br><br>
                             </div>
                         </div>
-
-                        <!--==================== QUALIFICATION 2 ====================-->
-                        <!-- <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__title">Création de sites web</h3>
-                                <span class="qualification__subtitle">Bamako - Orange Digital Center</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    juin 2022 - fev 2022
-                                </div>
-                            </div>
-                        </div> -->
-
                         <!--==================== QUALIFICATION 3 ====================-->
                         <div class="qualification__data">
                             <div>
@@ -508,26 +469,6 @@
                                 <!-- <span class="qualification__line"></span> -->
                             </div>
                         </div>
-
-                        <!--==================== QUALIFICATION 4 ====================-->
-                        <!-- <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__title">DUT en UI/UX</h3>
-                                <span class="qualification__subtitle">Bamako - Orange Digital Center</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    juin 2022 - fev 2022
-                                </div>
-                            </div>
-
-
-                        </div> -->
                     </div>
 
                     <!--==================== QUALIFICATION CONTENT 2 ====================-->
@@ -608,7 +549,7 @@
 
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
-            <h2 class="section__title">Prestation de services</h2>
+            <h2 class="section__title">Préstation de services</h2>
             <span class="section__subtitle">Ce que j'offre</span>
 
             <div class="services__container container grid">
@@ -743,12 +684,11 @@
                     <!--==================== PORTFOLIO 1 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/enviro2.png" alt="" class="portfolio__img">
 
                         <div class="portfolio_">
-                            <h3 class="portfolio__title">Site moderne</h3>
-                            <p class="portfolio__description">Site Web adaptable à tous les appareils, avec des
-                                composants d'interface utilisateur et des interactions animées.</p>
+                            <h3 class="portfolio__title">Site environnemental</h3>
+                            <p class="portfolio__description">Site Web sur l'environnement et les conseils sur la RSE.</p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Démo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -759,12 +699,11 @@
                     <!--==================== PORTFOLIO 2 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/freeTirage.png" alt="" class="portfolio__img">
 
                         <div class="portfolio_">
-                            <h3 class="portfolio__title">Site moderne</h3>
-                            <p class="portfolio__description">Site Web adaptable à tous les appareils, avec des
-                                composants d'interface utilisateur et des interactions animées.</p>
+                            <h3 class="portfolio__title">Application web</h3>
+                            <p class="portfolio__description">Application web permettant de faire les tirages</p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Démo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -775,12 +714,11 @@
                     <!--==================== PORTFOLIO 3 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/odc.png" alt="" class="portfolio__img">
 
                         <div class="portfolio_">
-                            <h3 class="portfolio__title">Site moderne</h3>
-                            <p class="portfolio__description">Site Web adaptable à tous les appareils, avec des
-                                composants d'interface utilisateur et des interactions animées.</p>
+                            <h3 class="portfolio__title">Site web</h3>
+                            <p class="portfolio__description">Site Web qui répresente Orange Digital Center.</p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Démo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -899,26 +837,9 @@
     <footer class="footer">
 
         <div class="footer__bg">
-            <div class="footer__container container grid">
-                <div>
-                    <h1 class="footer__title">Tiècoura DIARRA</h1>
-                    <span class="footer__subtitle">Développeur Fullstack</span>
-                </div>
-
-                <ul class="footer__links">
-                    <li>
-                        <a href="#services" class="footer__link">Services</a>
-                    </li>
-                    <li>
-                        <a href="#portfolio" class="footer__link">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#contact" class="footer__link">Contact</a>
-                    </li>
-                </ul>
-
+            <!-- <div class="footer__container container grid">
                 <div class="footer__socials">
-                    <a href="http://facebook.com" target="_blank" class="footer__social">
+                    <a href="https://www.facebook.com/tiecoura.diarra.79274" target="_blank" class="footer__social">
                         <i class="uil uil-facebook"></i>
                     </a>
                     <a href="http://instagram.com" target="_blank" class="footer__social">
@@ -928,8 +849,19 @@
                         <i class="uil uil-twitter-alt"></i>
                     </a>
                 </div>
+            </div> -->
+            
+            <div class="footer__socials">
+                <a href="https://www.facebook.com/tiecoura.diarra.79274" target="_blank" class="footer__social">
+                    <i class="uil uil-facebook"></i>
+                </a>
+                <a href="http://instagram.com" target="_blank" class="footer__social">
+                    <i class="uil uil-instagram"></i>
+                </a>
+                <a href="http://twitter.com/" target="_blank" class="footer__social">
+                    <i class="uil uil-twitter-alt"></i>
+                </a>
             </div>
-
             <p class="footer__copy">&#169; tiecouradiarra. Tous les droits sont réservés.</p>
         </div>
 
