Mise a jour du CV

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex" target="_blank">
+                        <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex" target="_blank">
                             Télécharger mon cv<i class="uil uil-download-alt button__icon"></i>
                         </a>
                         <!-- <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
