Mise a jour du CV

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
+                        <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex" target="_blank">
                             Télécharger mon cv<i class="uil uil-download-alt button__icon"></i>
                         </a>
-                        <!-- <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
-                            Télécharger le CV<i class="uil uil-download-alt button__icon"></i>
-                        </a> -->
+                        <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
+                            Télécharger le CV1<i class="uil uil-download-alt button__icon"></i>
+                        </a>  
                     </div>
                 </div>
             </div>
