Mise a jour du CV

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex" target="_blank">
                             Télécharger mon cv<i class="uil uil-download-alt button__icon"></i>
                         </a>
-                        <a href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
+                        <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
                             Télécharger le CV1<i class="uil uil-download-alt button__icon"></i>
                         </a>  
                     </div>
