--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex" target="_blank">
+                        <a download="TiecouraDiarraCV.pdf" href="assets/pdf/TiecouraDiarraCvV.pdf" class="button button--flex" target="_blank">
                             Télécharger mon cv<i class="uil uil-download-alt button__icon"></i>
                         </a>
-                        <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCv.pdf" class="button button--flex">
+                        <!-- <a download="TiecouraDiarraCv.pdf" href="assets/pdf/TiecouraDiarraCV.pdf" class="button button--flex">
                             Télécharger le CV1<i class="uil uil-download-alt button__icon"></i>
-                        </a>  
+                        </a>   -->
                     </div>
                 </div>
             </div>
